packages/loosetGraphParser/loosetGraphParser.js
// Generated from loosetGraph.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class loosetGraph extends antlr4.Parser {

    static grammarFileName = "loosetGraph.g4";
    static literalNames = [ null, null, "':'", "'->'", "'=>'", null, null, 
                            null, "'}'" ];
    static symbolicNames = [ null, "ID", "SEMI", "ARROW", "DOUBLE_ARROW", 
                             "SPACES_RULE_TOKEN", "OPEN_EDN", "OPEN_SUB_EDN", 
                             "CLOSE_EDN", "EDN" ];
    static ruleNames = [ "loosetGraph", "foldable", "foldableID", "edge", 
                         "node", "labelID", "lixID", "nodeProps", "edn", 
                         "innerEdn" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = loosetGraph.ruleNames;
        this.literalNames = loosetGraph.literalNames;
        this.symbolicNames = loosetGraph.symbolicNames;
    }



	loosetGraph() {
	    let localctx = new LoosetGraphContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, loosetGraph.RULE_loosetGraph);
	    var _la = 0;
	    try {
	        this.state = 56;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 23;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===1 || _la===4) {
	                this.state = 20;
	                this.edge();
	                this.state = 25;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 29;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 26;
	                    this.foldable(); 
	                }
	                this.state = 31;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	            }

	            this.state = 35;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===1 || _la===4) {
	                this.state = 32;
	                this.edge();
	                this.state = 37;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 41;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 38;
	                    this.foldable(); 
	                }
	                this.state = 43;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	            }

	            this.state = 47;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 44;
	                    this.edge(); 
	                }
	                this.state = 49;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	            }

	            this.state = 53;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===1 || _la===4) {
	                this.state = 50;
	                this.nodeProps();
	                this.state = 55;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	foldable() {
	    let localctx = new FoldableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, loosetGraph.RULE_foldable);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        this.foldableID();
	        this.state = 62;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 59;
	                this.node(); 
	            }
	            this.state = 64;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	foldableID() {
	    let localctx = new FoldableIDContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, loosetGraph.RULE_foldableID);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 4:
	            this.state = 65;
	            this.labelID();
	            break;
	        case 1:
	            this.state = 66;
	            this.lixID();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 69;
	        this.match(loosetGraph.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	edge() {
	    let localctx = new EdgeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, loosetGraph.RULE_edge);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        this.node();
	        this.state = 72;
	        this.match(loosetGraph.ARROW);
	        this.state = 73;
	        this.node();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	node() {
	    let localctx = new NodeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, loosetGraph.RULE_node);
	    try {
	        this.state = 77;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 75;
	            this.lixID();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 76;
	            this.labelID();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	labelID() {
	    let localctx = new LabelIDContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, loosetGraph.RULE_labelID);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.match(loosetGraph.DOUBLE_ARROW);
	        this.state = 80;
	        this.match(loosetGraph.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lixID() {
	    let localctx = new LixIDContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, loosetGraph.RULE_lixID);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(loosetGraph.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nodeProps() {
	    let localctx = new NodePropsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, loosetGraph.RULE_nodeProps);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 84;
	        this.node();
	        this.state = 85;
	        this.edn();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	edn() {
	    let localctx = new EdnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, loosetGraph.RULE_edn);
	    var _la = 0;
	    try {
	        this.state = 99;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 6:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 87;
	            this.match(loosetGraph.OPEN_EDN);
	            this.state = 91;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 704) !== 0)) {
	                this.state = 88;
	                this.innerEdn();
	                this.state = 93;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 94;
	            this.match(loosetGraph.CLOSE_EDN);
	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 95;
	            this.match(loosetGraph.OPEN_SUB_EDN);
	            this.state = 96;
	            this.innerEdn();
	            this.state = 97;
	            this.match(loosetGraph.CLOSE_EDN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	innerEdn() {
	    let localctx = new InnerEdnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, loosetGraph.RULE_innerEdn);
	    var _la = 0;
	    try {
	        this.state = 111;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 101;
	            this.match(loosetGraph.EDN);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 102;
	            this.edn();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 103;
	            this.match(loosetGraph.OPEN_SUB_EDN);
	            this.state = 107;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 704) !== 0)) {
	                this.state = 104;
	                this.innerEdn();
	                this.state = 109;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 110;
	            this.match(loosetGraph.CLOSE_EDN);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

loosetGraph.EOF = antlr4.Token.EOF;
loosetGraph.ID = 1;
loosetGraph.SEMI = 2;
loosetGraph.ARROW = 3;
loosetGraph.DOUBLE_ARROW = 4;
loosetGraph.SPACES_RULE_TOKEN = 5;
loosetGraph.OPEN_EDN = 6;
loosetGraph.OPEN_SUB_EDN = 7;
loosetGraph.CLOSE_EDN = 8;
loosetGraph.EDN = 9;

loosetGraph.RULE_loosetGraph = 0;
loosetGraph.RULE_foldable = 1;
loosetGraph.RULE_foldableID = 2;
loosetGraph.RULE_edge = 3;
loosetGraph.RULE_node = 4;
loosetGraph.RULE_labelID = 5;
loosetGraph.RULE_lixID = 6;
loosetGraph.RULE_nodeProps = 7;
loosetGraph.RULE_edn = 8;
loosetGraph.RULE_innerEdn = 9;

class LoosetGraphContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_loosetGraph;
    }

	edge = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(EdgeContext);
	    } else {
	        return this.getTypedRuleContext(EdgeContext,i);
	    }
	};

	foldable = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FoldableContext);
	    } else {
	        return this.getTypedRuleContext(FoldableContext,i);
	    }
	};

	nodeProps = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NodePropsContext);
	    } else {
	        return this.getTypedRuleContext(NodePropsContext,i);
	    }
	};


}



class FoldableContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_foldable;
    }

	foldableID() {
	    return this.getTypedRuleContext(FoldableIDContext,0);
	};

	node = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NodeContext);
	    } else {
	        return this.getTypedRuleContext(NodeContext,i);
	    }
	};


}



class FoldableIDContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_foldableID;
    }

	SEMI() {
	    return this.getToken(loosetGraph.SEMI, 0);
	};

	labelID() {
	    return this.getTypedRuleContext(LabelIDContext,0);
	};

	lixID() {
	    return this.getTypedRuleContext(LixIDContext,0);
	};


}



class EdgeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_edge;
    }

	node = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NodeContext);
	    } else {
	        return this.getTypedRuleContext(NodeContext,i);
	    }
	};

	ARROW() {
	    return this.getToken(loosetGraph.ARROW, 0);
	};


}



class NodeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_node;
    }

	lixID() {
	    return this.getTypedRuleContext(LixIDContext,0);
	};

	labelID() {
	    return this.getTypedRuleContext(LabelIDContext,0);
	};


}



class LabelIDContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_labelID;
    }

	DOUBLE_ARROW() {
	    return this.getToken(loosetGraph.DOUBLE_ARROW, 0);
	};

	ID() {
	    return this.getToken(loosetGraph.ID, 0);
	};


}



class LixIDContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_lixID;
    }

	ID() {
	    return this.getToken(loosetGraph.ID, 0);
	};


}



class NodePropsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_nodeProps;
    }

	node() {
	    return this.getTypedRuleContext(NodeContext,0);
	};

	edn() {
	    return this.getTypedRuleContext(EdnContext,0);
	};


}



class EdnContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_edn;
    }

	OPEN_EDN() {
	    return this.getToken(loosetGraph.OPEN_EDN, 0);
	};

	CLOSE_EDN() {
	    return this.getToken(loosetGraph.CLOSE_EDN, 0);
	};

	innerEdn = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(InnerEdnContext);
	    } else {
	        return this.getTypedRuleContext(InnerEdnContext,i);
	    }
	};

	OPEN_SUB_EDN() {
	    return this.getToken(loosetGraph.OPEN_SUB_EDN, 0);
	};


}



class InnerEdnContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = loosetGraph.RULE_innerEdn;
    }

	EDN() {
	    return this.getToken(loosetGraph.EDN, 0);
	};

	edn() {
	    return this.getTypedRuleContext(EdnContext,0);
	};

	OPEN_SUB_EDN() {
	    return this.getToken(loosetGraph.OPEN_SUB_EDN, 0);
	};

	CLOSE_EDN() {
	    return this.getToken(loosetGraph.CLOSE_EDN, 0);
	};

	innerEdn = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(InnerEdnContext);
	    } else {
	        return this.getTypedRuleContext(InnerEdnContext,i);
	    }
	};


}




loosetGraph.LoosetGraphContext = LoosetGraphContext; 
loosetGraph.FoldableContext = FoldableContext; 
loosetGraph.FoldableIDContext = FoldableIDContext; 
loosetGraph.EdgeContext = EdgeContext; 
loosetGraph.NodeContext = NodeContext; 
loosetGraph.LabelIDContext = LabelIDContext; 
loosetGraph.LixIDContext = LixIDContext; 
loosetGraph.NodePropsContext = NodePropsContext; 
loosetGraph.EdnContext = EdnContext; 
loosetGraph.InnerEdnContext = InnerEdnContext; 
